Sort out z-indexes after title bar fix broke them

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ iframe {
 	background: #9E9E9E;
 	left: 0px;
 	width: 100%;
-	z-index: 2;
+	z-index: 3;
 	height: 64px;
 	box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.37)
 }
@@ -47,7 +47,7 @@ iframe {
 }
 
 #dropdown-menu {
-  z-index: 3;
+  z-index: 4;
   position: absolute;
   right: 2px;
   top: 2px;
@@ -90,7 +90,7 @@ iframe {
 }
 
 #overflow-close {
-  z-index: 1;
+  z-index: 2;
   top: 0px;
   bottom: 0px;
   width: 100%;
@@ -162,7 +162,7 @@ iframe  {
   height: 100%;
   background: #FFF;
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   left: -300px;
   transition: left 0.2s ease-in;
 }
@@ -173,7 +173,7 @@ iframe  {
 }
 
 #dim {
-  z-index: 0;
+  z-index: 1;
   height: 100%;
   width: 100%;
   background: #000;
